--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -158,6 +158,12 @@ a.button span {
 #download-tar-gz span {
   background: transparent url(../images/tar-gz-icon.png) 12px 50% no-repeat;
 }
+#download-deb span {
+  background: transparent url(../images/deb-icon.png) 12px 50% no-repeat;
+}
+#download-vmdk span {
+  background: transparent url(../images/vmdk-icon.png) 12px 50% no-repeat;
+}
 #view-on-github span {
   background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
 }
